--- a/Vocab_ReadingsATHK2017ArgumentsThinking.Rmd
+++ b/Vocab_ReadingsATHK2017ArgumentsThinking.Rmd
@@ -6,8 +6,8 @@ output: html_document
 
 ## Important Readings
 
-* (this document!). To find some definitions of the terms, open the  `Vocab_ReadingsATHK2017ArgumentsThinking.Rmd` and you'll see definitions in the comments, indicated by `<!--- comment text -->`. 
-Quiz yourself with the version that doesn't show the definition, and subsequently check the definition in the .Rmd version to see if you got it right.  
+* To find some definitions of the terms in the Vocabulary section, open the  [Vocab_ReadingsATHK2017ArgumentsThinking.Rmd](https://raw.githubusercontent.com/alexholcombe/teachingATHK/master/Vocab_ReadingsATHK2017ArgumentsThinking.Rmd) and you'll see definitions in the comments, indicated by `<!--- comment text -->`. 
+Quiz yourself with this webpage that doesn't show the definition, and subsequently check the definition in the .Rmd version to see if you got it right.  
 
 * *The power of critical thinking* by Vaughn, Chapter 1, http://opac.library.usyd.edu.au/search/r?SEARCH=ATHK1001
 (or Chapters 2 and 3 of Bassham et al.'s *Critical Thinking*)
