--- a/Vocab_ReadingsATHK2017statsAndStudies.Rmd
+++ b/Vocab_ReadingsATHK2017statsAndStudies.Rmd
@@ -6,7 +6,7 @@ output: html_document
 
 ## Important Readings
 
-* To find some definitions of the terms in this document, open [Vocab_ReadingsATHK2017statsAndStudies.Rmd](https://raw.githubusercontent.com/alexholcombe/teachingATHK/master/Vocab_ReadingsATHK2017statsAndStudies.Rmd) and you'll see definitions in the comments, indicated by `<!--- comment text -->`. 
+* To find some definitions of the terms in this document, open [Vocab_ReadingsATHK2017statsAndStudies.Rmd](https://raw.githubusercontent.com/alexholcombe/teachingATHK/master/Vocab_ReadingsATHK2017statsAndStudies.Rmd) and you'll see definitions in the comments, and you'll see definitions in the comments, embedded in "\<!-- \-->", something like `<!--- comment text -->`. 
 Quiz yourself with this webpage that doesn't show the definition, and subsequently check the definition in the .Rmd version to see if you got it right.  
 
 * Chapter 4, Correlation, of *Naked Statistics* (already assigned by Bruce)
