--- a/Vocab_ReadingsATHK2017ArgumentsThinking.Rmd
+++ b/Vocab_ReadingsATHK2017ArgumentsThinking.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Vocab, readings: Alex's ATHK Arguments and thinking lectures and tutorials"
+title: "Vocab, readings: Alex's ATHK Arguments and Thinking lectures and tutorials"
 date: "4th lecture through to 18 May, 2017. More material may be added to this document as the lectures proceed."
 output: html_document
 ---
