--- a/Vocab_ReadingsATHK2017statsAndStudies.Rmd
+++ b/Vocab_ReadingsATHK2017statsAndStudies.Rmd
@@ -11,7 +11,11 @@ Quiz yourself with this webpage that doesn't show the definition, and subsequent
 
 * Chapter 4, Correlation, of *Naked Statistics* (already assigned by Bruce)
 
-*  [Alex's explanation](https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html) of random assignment and its relation to "controlling for" in regression, and someone else's [explanation of random assignment](http://isps.yale.edu/node/16697).
+* To understand how regression can "control for" an extraneous variable, read *Naked Statistics* Chapter 11 and the “Highly correlated explanatory variables” in Ch.12.
+
+*  [Alex on the ways the word "control" is used](https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html) and random assignment.
+
+* Another [explanation of random assignment](http://isps.yale.edu/node/16697).
 
 * [What is a confounding variable?](http://www.statisticshowto.com/design-of-experiments/confounding-variable/)
 
